--- a/k8s/react-deployment.yaml
+++ b/k8s/react-deployment.yaml
@@ -1,34 +1,33 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata: 
+metadata:
   name: react-app
-spec: 
+spec:
   replicas: 1
-  selector: 
-    matchLabels: 
+  selector:
+    matchLabels:
       app: react-app
-  template: 
-    metadata: 
-      labels: 
+  template:
+    metadata:
+      labels:
         app: react-app
-    spec: 
-      containers: 
+    spec:
+      containers:
       - name: react-app
         image: react-app:latest
-        ports: 
-        - containerPort: 80 
-
+        ports:
+        - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
-metadata: 
+metadata:
   name: react-service
-spec: 
-  type: NodePort
-  selector: 
+spec:
+  type: NodePort  # Expose React to localhost
+  selector:
     app: react-app
-  ports: 
+  ports:
     - protocol: TCP
       port: 80
       targetPort: 80
-      nodePort: 30000
+      nodePort: 30000  # Access via <NodeIP>:30000
