--- a/k8s/go-deployment.yaml
+++ b/k8s/go-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: go-api
-        image: go-api:latest
+        image: ram42847/go-api:latest
         ports:
         - containerPort: 8080
 ---
@@ -23,9 +23,11 @@ kind: Service
 metadata:
   name: go-api-service
 spec:
+  type: NodePort
   selector:
     app: go-api
-  ports:
+ ports:
     - protocol: TCP
       port: 8080
       targetPort: 8080
+      nodePort: 30002  # Access via <NodeIP>:30002
