--- a/k8s/react-deployment.yaml
+++ b/k8s/react-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: react-app
-        image: react-app:latest
+        image: ram42847/react-app:latest
         ports:
         - containerPort: 80
 ---
